--- a/teste.html
+++ b/teste.html
@@ -8,6 +8,7 @@
 </head>
 <body>
         <h3>Olá sou a página no GIT</h3>
+        <h3>Olá sou a segunda página no GIT</h3>
         
 </body>
 </html>
